--- a/source/frontend/src/alert/alertmodal.html
+++ b/source/frontend/src/alert/alertmodal.html
@@ -13,7 +13,7 @@
                </div>
 
                <div class="modal-footer">
-                   <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                   <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="alertCtrl.cancel()">Cancelar</button>
                    <button type="button" class="btn btn-ok" ng-click="alertCtrl.accept()">Aceptar</button>
                </div>
            </div>
