--- a/source/frontend/src/upload/results/results.html
+++ b/source/frontend/src/upload/results/results.html
@@ -1,7 +1,7 @@
 <div class="pageContanerCustom">
   <div class="item page resultImport">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12 col-sm-12">
         <span class="title-year">Plan 2017</span>
         <div class="dropdown menuExcel">
           <excelcomponent></excelcomponent>
@@ -9,15 +9,14 @@
         <button type="button" class="btn btn-default right" ui-sref="home.tree">Volver al listado completo
         </button>
       </div>
-      <div class="col-md-12">
+      <div class="col-md-12 col-sm-12">
         <p class="title-import-excel">Reporte de la importación</p>
         <hr class="lineColor">
         <div ng-show="resultsCtrl.completedProjects.length > 0">
-          <div class="contentDate" style="width: 100%; margin-top: 25px;">
+          <div class="titlePreviewProyect">
             <p class="previewProyect" ng-show="resultsCtrl.completedProjects.length == 1">{{resultsCtrl.completedProjects.length}} proyecto nuevo importado al PIG</p>
             <p class="previewProyect" ng-show="resultsCtrl.completedProjects.length > 1">{{resultsCtrl.completedProjects.length}} proyectos nuevos importados al PIG</p>
-            <div class="contentDate" style="width: 100%; margin-top: 25px;">
-                <div style="margin-bottom: 8px;font-size: 23px;">15 proyectos nuevos importados al PIG</div>
+            <div class="titlePreviewProyect">
                 <div class="alert alert-success" role="alert">
                 <div class="alert-text">
                   <i class="glyphicon glyphicon-ok-sign" aria-hidden="true"></i>
@@ -33,12 +32,12 @@
                   <span class="title">Estado</span>
               </div>
           </div>
-          <div class="col-md-12 notPadding">
+          <div class="col-md-12 col-sm-12 notPadding">
             <hr class="lineContentProyect">
           </div>
-          <ul style="list-style: none;padding: 0;">
+          <ul class="floatContent listPreviewProject notPadding">
             <li class="col-md-12 notPadding" ng-repeat="project in resultsCtrl.completedProjects">
-              <div class="col-md-7 col-sm-6 col-xs-12 notPadding">
+              <div class="col-md-7 col-sm-12 col-xs-12 notPadding">
                 <span class="thirdLabel">{{project.nombreProyecto}}</span>
               </div>
               <div class="box-date">
@@ -46,6 +45,7 @@
                 <span class="date left">{{project.fechaInicio | date:'MM/dd/yyyy'}}</span>
                 <span class="titleMobile">Fin: </span>
                 <span class="date left">{{project.fechaFin | date:'MM/dd/yyyy'}}</span>
+                <span class="titleMobile estado">Estado: </span>
                    <span class="estateClass" ng-class="{'completoClass' : project.estado === 'Completo', 'incompletoClass' : project.estado === 'Incompleto', 'presentadoClass' : project.estado === 'Presentado', 'verificadoClass' : project.estado === 'Verificado', 'canceladoClass' : project.estado === 'Cancelado', 'preAprobadoClass' : project.estado === 'Pre aprobado', 'aprobadoClass' : project.estado === 'Aprobado', 'aplazadoClass' : project.estado === 'Aplazado', 'rechazadoClass' : project.estado === 'Rechazado', 'enPriorizacionClass' : project.estado === 'En Priorización'}">{{project.estado}}</span>
               </div>
               <div class="col-md-12 col-sm-12 col-xs-12 notPadding">
@@ -58,7 +58,7 @@
         </div> -->
         </div>
         <div ng-show="resultsCtrl.incompletedProjects.length > 0">
-          <div class="contentDate" style="width: 100%; margin-top: 25px;">
+          <div class="titlePreviewProyect">
             <p class="previewProyect" ng-show="resultsCtrl.incompletedProjects.length == 1">{{resultsCtrl.incompletedProjects.length}} proyecto importado con campos obligatorios incompletos</p>
             <p class="previewProyect" ng-show="resultsCtrl.incompletedProjects.length > 1">{{resultsCtrl.incompletedProjects.length}} proyectos importados con campos obligatorios incompletos</p>
             <div class="alert alert-warning" role="alert">
@@ -74,12 +74,12 @@
                   <span class="title">Estado</span>
               </div>
           </div>
-          <div class="col-md-12 notPadding">
-            <hr style="margin: 5px 0;">
+          <div class="col-md-12 col-sm-12 notPadding">
+            <hr>
           </div>
-          <ul style="list-style: none;padding: 0;">
+          <ul class="floatContent listPreviewProject notPadding">
             <li class="col-md-12 notPadding" ng-repeat="project in resultsCtrl.incompletedProjects">
-              <div class="col-md-7 col-sm-6 col-xs-12 notPadding">
+              <div class="col-md-7 col-sm-12 col-xs-12 notPadding">
                 <span class="thirdLabel">{{project.nombreProyecto}}</span>
               </div>
               <div class="box-date">
@@ -87,6 +87,7 @@
                 <span class="date left">{{project.fechaInicio | date:'MM/dd/yyyy'}}</span>
                 <span class="titleMobile">Fin: </span>
                 <span class="date left">{{project.fechaFin | date:'MM/dd/yyyy'}}</span>
+                 <span class="titleMobile estado">Estado: </span>
                    <span class="estateClass" ng-class="{'completoClass' : project.estado === 'Completo', 'incompletoClass' : project.estado === 'Incompleto', 'presentadoClass' : project.estado === 'Presentado', 'verificadoClass' : project.estado === 'Verificado', 'canceladoClass' : project.estado === 'Cancelado', 'preAprobadoClass' : project.estado === 'Pre aprobado', 'aprobadoClass' : project.estado === 'Aprobado', 'aplazadoClass' : project.estado === 'Aplazado', 'rechazadoClass' : project.estado === 'Rechazado', 'enPriorizacionClass' : project.estado === 'En Priorización'}">{{project.estado}}</span>
               </div>
               <div class="col-md-12 col-sm-12 col-xs-12 notPadding">
@@ -99,15 +100,14 @@
         </div> -->
         </div>
         <div ng-show="resultsCtrl.wrongProjects.length > 0">
-          <div class="contentDate" style="width: 100%; margin-top: 25px;">
+          <div class="titlePreviewProyect">
             <p class="previewProyect"  ng-show="resultsCtrl.wrongProjects.length == 1">{{resultsCtrl.wrongProjects.length}} proyecto no importado <button type="button" class="btn btn-default" ng-disabled="!resultsCtrl.results.nombreArchivoError" ng-click="resultsCtrl.downloadErrorsFile()">
-            <img src="../../../assets/icono-xls.png" style="width: 20px;float: left;"> Descargar proyectos no importados</img>
+            <img src="../../../assets/icono-xls.png"> Descargar proyectos no importados</img>
           </button></p>
             <p class="previewProyect"  ng-show="resultsCtrl.wrongProjects.length > 1">{{resultsCtrl.wrongProjects.length}} proyectos no importados <button type="button" class="btn btn-default" ng-disabled="!resultsCtrl.results.nombreArchivoError" ng-click="resultsCtrl.downloadErrorsFile()">
-            <img src="../../../assets/icono-xls.png" style="width: 20px;float: left;"> Descargar proyectos no importados</img>
+            <img src="../../../assets/icono-xls.png"> Descargar proyectos no importados</img>
           </button></p>
             <div class="alert alert-danger" role="alert">
-                    <i class="glyphicon glyphicon-remove-sign" aria-hidden="true"></i>
                     <strong>No importado - </strong> 
                    Descargá el archivo Excel y verificá la información y su formato. Una vez que lo hayas corregido probá importar el excel nuevamente.
                    <div style="margin-top:15px;">
@@ -144,12 +144,12 @@
                   <span class="title">Estado</span>
               </div>
           </div>
-          <div class="col-md-12 notPadding">
-            <hr style="margin: 5px 0;">
+          <div class="col-md-12 col-sm-12 notPadding">
+            <hr>
           </div>
-          <ul style="list-style: none;padding: 0;">
+          <ul class="floatContent listPreviewProject notPadding">
             <li class="col-md-12 notPadding" ng-repeat="project in resultsCtrl.wrongProjects">
-              <div class="col-md-7 col-sm-6 col-xs-12 notPadding">
+              <div class="col-md-7 col-sm-12 col-xs-12 notPadding">
                 <span class="thirdLabel">{{project.nombreProyecto}}</span>
               </div>
               <div class="box-date">
@@ -157,6 +157,7 @@
                 <span class="date left">{{project.fechaInicio | date:'MM/dd/yyyy'}}</span>
                 <span class="titleMobile">Fin: </span>
                 <span class="date left">{{project.fechaFin | date:'MM/dd/yyyy'}}</span>
+                <span class="titleMobile estado">Estado: </span>
                <span class="estateClass" ng-class="{'completoClass' : project.estado === 'Completo', 'incompletoClass' : project.estado === 'Incompleto', 'presentadoClass' : project.estado === 'Presentado', 'verificadoClass' : project.estado === 'Verificado', 'canceladoClass' : project.estado === 'Cancelado', 'preAprobadoClass' : project.estado === 'Pre aprobado', 'aprobadoClass' : project.estado === 'Aprobado', 'aplazadoClass' : project.estado === 'Aplazado', 'rechazadoClass' : project.estado === 'Rechazado', 'enPriorizacionClass' : project.estado === 'En Priorización'}">{{project.estado}}</span>
               </div>
               <div class="col-md-12 col-sm-12 col-xs-12 notPadding">
@@ -168,7 +169,7 @@
           <button type="button" class="btn btn-default" data-toggle="collapse" aria-expanded="false" href="#noImportados">Ver todos</button>
         </div> -->
         </div>
-        <div class="col-md-12 notPadding" style="margin-top:25px;">
+        <div class="col-md-12 col-sm-12 notPadding" style="margin-top:25px;">
           <button type="button" class="btn btn-default" ui-sref="home.tree">Volver al listado completo
         </button>
         </div>
