--- a/source/frontend/src/home/form-strategic-objective.html
+++ b/source/frontend/src/home/form-strategic-objective.html
@@ -38,7 +38,7 @@
 
 
             <button type="submit" class="btn btn-success">Guardar Objetivo Estrat&eacute;gico</button>
-            <button class="btn btn-default btnRemove right" type="button" data-toggle="modal" data-target="#strategicObjAlert">
+            <button class="btn btn-default btnRemove right" type="button" data-toggle="modal" data-target="#strategicObjAlert" ng-show="formCtrl.currentStrategicObjective.idObjetivoJurisdiccional">
                 Eliminar
             </button>
             <button type="button" class="btn btn-default right" ng-click="formCtrl.cancelStrategicObjective()">Cancelar cambios</button>
