fix en las tablas de presupuesto de la version 2.2.0

--- a/source/frontend/src/home/form-project.html
+++ b/source/frontend/src/home/form-project.html
@@ -437,7 +437,7 @@ Si el proyecto no tiene una ubicación definida aún o no impacta en ningún lug
 
 
 
-  <uib-tab index="1" heading="Información detallada">
+  <uib-tab index="1" heading="Información detallada" ng-if="formCtrl.showDetailsTab()">
     <div class="col-md-12 contentFormProyect" id="alertmodalcomponent">
        <div class="col-md-3 col-sm-12 col-xs-12 pull-right contentAction" id="obraprojectid">
             <div class="contentProgress content-actionForm">
